--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "preact": "^10.24.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icon": "^1.0.0",
     "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
@@ -30,6 +29,8 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
   }
