--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@rollup/plugin-inject": "^5.0.5",
+    "@tanstack/react-query": "^5.59.19",
+    "@tanstack/react-query-devtools": "^5.59.19",
     "@vitejs/plugin-legacy": "^5.4.3",
     "preact": "^10.24.3",
     "react": "^18.3.1",
