--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "preact": "^10.24.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.13.3",
     "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
